--- a/www/app/webroot/css/contact.css
+++ b/www/app/webroot/css/contact.css
@@ -16,11 +16,10 @@ body {
   max-width: 600px;
   border-top: 4px solid;
   border-top-color: currentcolor;
-  border-bottom-color: currentcolor;
   border-color: rgb(0, 0, 0);
   flex-direction: column;
   padding: 60px;
-  gap: 20px;
+  gap: 30px;
   align-items: center;
   margin: 30px 0px 30px;
   border-radius: 4px;
@@ -48,8 +47,9 @@ body {
 }
 .inputsForm {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 20px;
+  align-items: center;
 }
 .field-wrapper {
   display: flex;
