--- a/www/app/webroot/css/contact.css
+++ b/www/app/webroot/css/contact.css
@@ -74,3 +74,26 @@ body {
 .confirmation {
   color: rgb(0, 0, 0);
 }
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  font-family: Arial, sans-serif;
+  /* min-width: 1000px; */
+  align-items: center;
+}
+th {
+  background-color: #f2f2f2;
+  color: #333;
+  font-weight: bold;
+  padding: 10px;
+  border: 1px solid #ddd;
+}
+td {
+  padding: 30px;
+  border: 1px solid #ddd;
+}
+
+tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
